# Nowa

./: .gitignore  .gitmodules  CMakeLists.txt  Nowa.code-workspace  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  ancs.c  ble_ancs_utils.c  ble_utils.c  dispatcher.cpp  emci_profile.c  emci_profile.cpp  main.c  main.cpp  netlog.c  spiffs.c  tcp_server.c  uart_console.c  web_server.c  web_server_profile.cpp  wifi_connect.c
main/ble_ancs/: ble_ancs.c  ble_ancs_utils.c  ble_utils.c
main/ble_ancs/include/: ble_ancs.h  ble_ancs_utils.h
main/dispatcher/: Dispatcher.cpp  DispatcherDriverInterface.cpp  DispatcherUtils.cpp  NotificationProvider.cpp
main/dispatcher/include/: Dispatcher.h  DispatcherTypes.h  DispatcherUtils.h  NotificationProvider.h
main/include/: ancs.h  ble_ancs_utils.h  ble_utils.h  dispatcher.h  emci_config.h  emci_profile.h  netlog.h  spiffs.h  tcp_server.h  uart_console.h  web_server.h  web_server_private.h  web_server_profile.h
spiffs_image/: index.html  log.html  update.html
